Layout issue with fb button taken care of.

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,4 +1,4 @@
-h1, h4{
+.h4{
 text-align: center;
 }
 .sign-in{
